--- a/Documentation/latex/classClassDetail.tex
+++ b/Documentation/latex/classClassDetail.tex
@@ -1,24 +1,32 @@
-\hypertarget{classPageLayout}{\section{Page\-Layout Class Reference}
-\label{classPageLayout}\index{Page\-Layout@{Page\-Layout}}
+\hypertarget{classClassDetail}{\section{Class\-Detail Class Reference}
+\label{classClassDetail}\index{Class\-Detail@{Class\-Detail}}
 }
 
 
-{\ttfamily \#include $<$pagelayout.\-h$>$}
+{\ttfamily \#include $<$classdetail.\-h$>$}
 
-Inheritance diagram for Page\-Layout\-:\begin{figure}[H]
+Inheritance diagram for Class\-Detail\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=4.000000cm]{classPageLayout}
+\includegraphics[height=4.000000cm]{classClassDetail}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hyperlink{classPageLayout_ab3f470f006f9820610d9aaebe5b8427b}{Page\-Layout} ()
+\hyperlink{classClassDetail_a70975c4ff964e21958e31f2020cdc643}{Class\-Detail} ()
+\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
+void \hyperlink{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{Total\-Classes} ()
+\begin{DoxyCompactList}\small\item\em Get total classes. \end{DoxyCompactList}\item 
+void \hyperlink{classClassDetail_a2a2e7942037c2d8e50ad0a60777435c0}{Class\-Info} ()
+\item 
+void \hyperlink{classInputDetail_ae55dcc0e15b85d302a09046b145330bb}{Header} (string title\-Name)
 \item 
 void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
 \item 
-void \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer} ()
+void \hyperlink{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}{Footer} ()
+\item 
+string \hyperlink{classInputDetail_ad0a78d7c864bcccf7813a526d59573be}{Int\-To\-String} (int value)
 \item 
 void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
 \item 
@@ -73,6 +81,41 @@ void \hyperlink{classPageStructureMaker_a419feca1cfdb50e1be757eb1c2707a73}{Butto
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
+\hypertarget{classClassDetail_a4c3d277d14ead4f704afcbd754b1ebf0}{int {\bfseries total\-Classes}}\label{classClassDetail_a4c3d277d14ead4f704afcbd754b1ebf0}
+
+\item 
+\hypertarget{classClassDetail_adc76a1aeb9a8f117220a782852c7ecc4}{string {\bfseries class\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetail_adc76a1aeb9a8f117220a782852c7ecc4}
+
+\item 
+\hypertarget{classClassDetail_a354658f5296453f875188e04cdb30039}{string {\bfseries subject\-Code} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetail_a354658f5296453f875188e04cdb30039}
+
+\item 
+\hypertarget{classClassDetail_a46738afed3cc58eb02570368a45ed6e5}{string {\bfseries subject\-Name} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetail_a46738afed3cc58eb02570368a45ed6e5}
+
+\item 
+\hypertarget{classClassDetail_a72b2e85864fe98d1ddcd0d32e106b884}{string {\bfseries table\-Heading} \mbox{[}max\-Classes\mbox{]}}\label{classClassDetail_a72b2e85864fe98d1ddcd0d32e106b884}
+
+\item 
+\hyperlink{classInputFieldName}{Input\-Field\-Name} \hyperlink{classInputDetail_ac6f85380c5152c406d483726382c4798}{field\-Name}
+\item 
+\hypertarget{classInputDetail_ac0cc70b017ef94fb55acb46fc44f0df5}{\hyperlink{classReadInputField}{Read\-Input\-Field} {\bfseries read\-Field}}\label{classInputDetail_ac0cc70b017ef94fb55acb46fc44f0df5}
+
+\item 
+\hypertarget{classInputDetail_a2e9226db1b744de4bf406398f48cf962}{int {\bfseries i}}\label{classInputDetail_a2e9226db1b744de4bf406398f48cf962}
+
+\item 
+\hypertarget{classInputDetail_af124a26cb4e4f86d0d9eb68200ee500b}{int {\bfseries j}}\label{classInputDetail_af124a26cb4e4f86d0d9eb68200ee500b}
+
+\item 
+\hypertarget{classInputDetail_a1bb6b8bff3d5fc6d5c998e4c451035bc}{int {\bfseries k}}\label{classInputDetail_a1bb6b8bff3d5fc6d5c998e4c451035bc}
+
+\item 
+\hypertarget{classInputDetail_a5284736b5fd3db0251cfeab7c581c0bd}{stringstream {\bfseries ss}}\label{classInputDetail_a5284736b5fd3db0251cfeab7c581c0bd}
+
+\item 
+\hypertarget{classInputDetail_abacd5d7ee7ebd7e9f36bbf3fefd13a5d}{string {\bfseries temp}}\label{classInputDetail_abacd5d7ee7ebd7e9f36bbf3fefd13a5d}
+
+\item 
 \hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{string {\bfseries project\-Name}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
 
 \item 
@@ -123,31 +166,33 @@ string \hyperlink{classPageStructureMaker_af41d4e21b808f5f8dc2c727f775b6fb2}{sta
 
 
 \subsection{Detailed Description}
--\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Include required header files ------------------------------------------------------------------ =================================================================== Class\-: \hyperlink{classPageLayout}{Page\-Layout} \-: public \hyperlink{classPageStructureMaker}{Page\-Structure\-Maker} Description\-: For adding header and footer to page =================================================================== 
+=================================================================== Class\-: \hyperlink{classClassDetail}{Class\-Detail} Description\-: This class is used to get details of class from user. Like class name, total classes, subject details etc. =================================================================== 
 
-Definition at line 33 of file pagelayout.\-h.
+Definition at line 42 of file classdetail.\-h.
 
 
 
 \subsection{Constructor \& Destructor Documentation}
-\hypertarget{classPageLayout_ab3f470f006f9820610d9aaebe5b8427b}{\index{Page\-Layout@{Page\-Layout}!Page\-Layout@{Page\-Layout}}
-\index{Page\-Layout@{Page\-Layout}!PageLayout@{Page\-Layout}}
-\subsubsection[{Page\-Layout}]{\setlength{\rightskip}{0pt plus 5cm}Page\-Layout\-::\-Page\-Layout (
+\hypertarget{classClassDetail_a70975c4ff964e21958e31f2020cdc643}{\index{Class\-Detail@{Class\-Detail}!Class\-Detail@{Class\-Detail}}
+\index{Class\-Detail@{Class\-Detail}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Class\-Detail}]{\setlength{\rightskip}{0pt plus 5cm}Class\-Detail\-::\-Class\-Detail (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_ab3f470f006f9820610d9aaebe5b8427b}
-Constructor
+)}}\label{classClassDetail_a70975c4ff964e21958e31f2020cdc643}
 
--\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Include local header file ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Function Definitions of \hyperlink{classPageLayout}{Page\-Layout} Class ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_ab3f470f006f9820610d9aaebe5b8427b}{Page\-Layout()} Description\-: Constructor -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 37 of file pagelayout.\-cc.
+Constructor. 
+
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Incude header file which has \hyperlink{classClassDetail}{Class\-Detail}'s declaration ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Defnition of member functions ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: \hyperlink{classClassDetail_a70975c4ff964e21958e31f2020cdc643}{Class\-Detail()} Description\-: Constructor -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 37 of file classdetail.\-cc.
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classPageStructureMaker_ac91e234e2d54dedd9d7e556fabf21d2b}{\index{Page\-Layout@{Page\-Layout}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_ac91e234e2d54dedd9d7e556fabf21d2b}{\index{Class\-Detail@{Class\-Detail}!Body\-End@{Body\-End}}
+\index{Body\-End@{Body\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Body\-End (
 \begin{DoxyParamCaption}
 {}
@@ -159,8 +204,8 @@ Display $<$/\-B\-O\-D\-Y$>$
 
 Definition at line 180 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_ab7a645675166f34fac99f1ed8feb7c27}{\index{Page\-Layout@{Page\-Layout}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_ab7a645675166f34fac99f1ed8feb7c27}{\index{Class\-Detail@{Class\-Detail}!Body\-Start@{Body\-Start}}
+\index{Body\-Start@{Body\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -172,8 +217,8 @@ Display $<$\-B\-O\-D\-Y$>$
 
 Definition at line 166 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a419feca1cfdb50e1be757eb1c2707a73}{\index{Page\-Layout@{Page\-Layout}!Button@{Button}}
-\index{Button@{Button}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a419feca1cfdb50e1be757eb1c2707a73}{\index{Class\-Detail@{Class\-Detail}!Button@{Button}}
+\index{Button@{Button}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Button (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -188,8 +233,21 @@ Button
 
 Definition at line 356 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_aacdb11817f8ab246bc59c552e04e862d}{\index{Page\-Layout@{Page\-Layout}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!PageLayout@{Page\-Layout}}
+\hypertarget{classClassDetail_a2a2e7942037c2d8e50ad0a60777435c0}{\index{Class\-Detail@{Class\-Detail}!Class\-Info@{Class\-Info}}
+\index{Class\-Info@{Class\-Info}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Class\-Info}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Detail\-::\-Class\-Info (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classClassDetail_a2a2e7942037c2d8e50ad0a60777435c0}
+Get class details like class name, subject name and subject code
+
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: \hyperlink{classClassDetail_a2a2e7942037c2d8e50ad0a60777435c0}{Class\-Info()} Description\-: Get class name, subject code and subject name from user. -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 138 of file classdetail.\-cc.
+
+\hypertarget{classPageStructureMaker_aacdb11817f8ab246bc59c552e04e862d}{\index{Class\-Detail@{Class\-Detail}!C\-S\-S@{C\-S\-S}}
+\index{C\-S\-S@{C\-S\-S}!ClassDetail@{Class\-Detail}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
@@ -201,8 +259,8 @@ Add External C\-S\-S
 
 Definition at line 138 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a2913e76bf188ed777dcd33003ef6207d}{\index{Page\-Layout@{Page\-Layout}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a2913e76bf188ed777dcd33003ef6207d}{\index{Class\-Detail@{Class\-Detail}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Div\-End (
 \begin{DoxyParamCaption}
 {}
@@ -214,8 +272,8 @@ End div section
 
 Definition at line 209 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a927f92889555dd316c129f706be86a5c}{\index{Page\-Layout@{Page\-Layout}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a927f92889555dd316c129f706be86a5c}{\index{Class\-Detail@{Class\-Detail}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Div\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -228,25 +286,23 @@ Start Div Section
 
 Definition at line 195 of file pagestructure.\-cc.
 
-\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Page\-Layout@{Page\-Layout}!Footer@{Footer}}
-\index{Footer@{Footer}!PageLayout@{Page\-Layout}}
-\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Footer (
+\hypertarget{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}{\index{Class\-Detail@{Class\-Detail}!Footer@{Footer}}
+\index{Footer@{Footer}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Input\-Detail\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
-Footer Section of Page
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classInputDetail}{Input\-Detail} Method\-: \hyperlink{classInputDetail}{Input\-Detail} \-:\-: \hyperlink{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}{Footer()} Description\-: Common for all pages(end body, html) -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
--\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} Description\-: Footer of pages -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
-
-Reimplemented in \hyperlink{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}{Input\-Detail}.
+Reimplemented from \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Page\-Layout}.
 
 
 
-Definition at line 145 of file pagelayout.\-cc.
+Definition at line 68 of file inputdetail.\-cc.
 
-\hypertarget{classPageStructureMaker_a65d97f23bb543f3db5201b2009f7f65a}{\index{Page\-Layout@{Page\-Layout}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a65d97f23bb543f3db5201b2009f7f65a}{\index{Class\-Detail@{Class\-Detail}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Form\-End (
 \begin{DoxyParamCaption}
 {}
@@ -258,8 +314,8 @@ End Form
 
 Definition at line 238 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a3f25d5b844a2251883acb80d8fabb77d}{\index{Page\-Layout@{Page\-Layout}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a3f25d5b844a2251883acb80d8fabb77d}{\index{Class\-Detail@{Class\-Detail}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Form\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name, }
@@ -273,21 +329,21 @@ Start Form
 
 Definition at line 223 of file pagestructure.\-cc.
 
-\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Page\-Layout@{Page\-Layout}!Head@{Head}}
-\index{Head@{Head}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Class\-Detail@{Class\-Detail}!Head@{Head}}
+\index{Head@{Head}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Head}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Head (
 \begin{DoxyParamCaption}
 \item[{string}]{title\-Name}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}
 Head Section of Page
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{Head(string title\-Name)} Description\-: Head Section of page, titla\-Name pass to Title function. -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
 Definition at line 105 of file pagelayout.\-cc.
 
-\hypertarget{classPageStructureMaker_ad64115d592b0989b422a93f85278186e}{\index{Page\-Layout@{Page\-Layout}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_ad64115d592b0989b422a93f85278186e}{\index{Class\-Detail@{Class\-Detail}!Head\-End@{Head\-End}}
+\index{Head\-End@{Head\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
@@ -299,21 +355,32 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 112 of file pagestructure.\-cc.
 
-\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Page\-Layout@{Page\-Layout}!Header@{Header}}
-\index{Header@{Header}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Class\-Detail@{Class\-Detail}!Header@{Header}}
+\index{Header@{Header}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
 Header Section of Page
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header()} Description\-: Call Menu Function -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
 Definition at line 88 of file pagelayout.\-cc.
 
-\hypertarget{classPageStructureMaker_a14312134cb108f91f2e6d9cbd6916e97}{\index{Page\-Layout@{Page\-Layout}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classInputDetail_ae55dcc0e15b85d302a09046b145330bb}{\index{Class\-Detail@{Class\-Detail}!Header@{Header}}
+\index{Header@{Header}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Input\-Detail\-::\-Header (
+\begin{DoxyParamCaption}
+\item[{string}]{title\-Name}
+\end{DoxyParamCaption}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classInputDetail_ae55dcc0e15b85d302a09046b145330bb}
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classInputDetail}{Input\-Detail} Method\-: \hyperlink{classInputDetail}{Input\-Detail} \-:\-: \hyperlink{classInputDetail_ae55dcc0e15b85d302a09046b145330bb}{Header(string title\-Name)} Description\-: common header for all pages(start html, head, body) -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 50 of file inputdetail.\-cc.
+
+\hypertarget{classPageStructureMaker_a14312134cb108f91f2e6d9cbd6916e97}{\index{Class\-Detail@{Class\-Detail}!Head\-Start@{Head\-Start}}
+\index{Head\-Start@{Head\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -325,8 +392,8 @@ Display $<$\-H\-E\-A\-D$>$
 
 Definition at line 99 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a63b877af1c2c8de8332e3f7eb4c2c2b0}{\index{Page\-Layout@{Page\-Layout}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a63b877af1c2c8de8332e3f7eb4c2c2b0}{\index{Class\-Detail@{Class\-Detail}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
@@ -338,8 +405,8 @@ Display $<$/\-H\-T\-M\-L$>$
 
 Definition at line 86 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_ad25d6abc983253567e2370882fc1b407}{\index{Page\-Layout@{Page\-Layout}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_ad25d6abc983253567e2370882fc1b407}{\index{Class\-Detail@{Class\-Detail}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -351,8 +418,8 @@ Display $<$\-H\-T\-M\-L$>$
 
 Definition at line 73 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a3547027801e298307527f1e934787b13}{\index{Page\-Layout@{Page\-Layout}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a3547027801e298307527f1e934787b13}{\index{Class\-Detail@{Class\-Detail}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Input\-Field (
 \begin{DoxyParamCaption}
 \item[{string}]{type, }
@@ -367,8 +434,19 @@ Input Field
 
 Definition at line 281 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_ac221d1169f4dbcef6adb00938919193d}{\index{Page\-Layout@{Page\-Layout}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!PageLayout@{Page\-Layout}}
+\hypertarget{classInputDetail_ad0a78d7c864bcccf7813a526d59573be}{\index{Class\-Detail@{Class\-Detail}!Int\-To\-String@{Int\-To\-String}}
+\index{Int\-To\-String@{Int\-To\-String}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Int\-To\-String}]{\setlength{\rightskip}{0pt plus 5cm}string Input\-Detail\-::\-Int\-To\-String (
+\begin{DoxyParamCaption}
+\item[{int}]{value}
+\end{DoxyParamCaption}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classInputDetail_ad0a78d7c864bcccf7813a526d59573be}
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classInputDetail}{Input\-Detail} Method\-: \hyperlink{classInputDetail}{Input\-Detail} \-:\-: \hyperlink{classInputDetail_ad0a78d7c864bcccf7813a526d59573be}{Int\-To\-String(int value)} Description\-: Convert Int to String using stringstream object -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 82 of file inputdetail.\-cc.
+
+\hypertarget{classPageStructureMaker_ac221d1169f4dbcef6adb00938919193d}{\index{Class\-Detail@{Class\-Detail}!Javascript@{Javascript}}
+\index{Javascript@{Javascript}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
@@ -380,34 +458,34 @@ Add Javascript File
 
 Definition at line 153 of file pagestructure.\-cc.
 
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Page\-Layout@{Page\-Layout}!Logo@{Logo}}
-\index{Logo@{Logo}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Class\-Detail@{Class\-Detail}!Logo@{Logo}}
+\index{Logo@{Logo}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
 \begin{DoxyParamCaption}
 \item[{string}]{logo\-Name}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}
 Logo on Page
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{Logo(string logo\-Name)} Description\-: Logo to project -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
 Definition at line 73 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Page\-Layout@{Page\-Layout}!Menu@{Menu}}
-\index{Menu@{Menu}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Class\-Detail@{Class\-Detail}!Menu@{Menu}}
+\index{Menu@{Menu}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a49af1dca286bbee9432192a7b3c00332}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a49af1dca286bbee9432192a7b3c00332}
 List/\-Menu Navigation()
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu()} Description\-: Add Menu on pages(for navigation) -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
 Definition at line 50 of file pagelayout.\-cc.
 
-\hypertarget{classPageStructureMaker_a81eb3cdbc840a4c8165cef87330ade09}{\index{Page\-Layout@{Page\-Layout}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a81eb3cdbc840a4c8165cef87330ade09}{\index{Class\-Detail@{Class\-Detail}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Select\-Field\-End (
 \begin{DoxyParamCaption}
 {}
@@ -419,8 +497,8 @@ End Select Field
 
 Definition at line 312 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_ae8684bb66ca463e2f92e09c96137f9e3}{\index{Page\-Layout@{Page\-Layout}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_ae8684bb66ca463e2f92e09c96137f9e3}{\index{Class\-Detail@{Class\-Detail}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Select\-Field\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name}
@@ -432,8 +510,8 @@ Select Field Start
 
 Definition at line 299 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a7682f479f7f1012d426ec9f9535def60}{\index{Page\-Layout@{Page\-Layout}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a7682f479f7f1012d426ec9f9535def60}{\index{Class\-Detail@{Class\-Detail}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Select\-Option\-End (
 \begin{DoxyParamCaption}
 {}
@@ -445,8 +523,8 @@ Selct Option End
 
 Definition at line 342 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a77856078e74dab25329132ea07466f92}{\index{Page\-Layout@{Page\-Layout}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a77856078e74dab25329132ea07466f92}{\index{Class\-Detail@{Class\-Detail}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Select\-Option\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{value, }
@@ -459,8 +537,8 @@ Select Option Start
 
 Definition at line 326 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_aaf78d67380c400cc0057c6519276f721}{\index{Page\-Layout@{Page\-Layout}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_aaf78d67380c400cc0057c6519276f721}{\index{Class\-Detail@{Class\-Detail}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Set\-H\-T\-M\-L\-Variables (
 \begin{DoxyParamCaption}
 {}
@@ -472,8 +550,8 @@ Assingn Values to variables
 
 Definition at line 48 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a7f8fefbe7a825c1b7761fc8a0f1bb8e4}{\index{Page\-Layout@{Page\-Layout}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a7f8fefbe7a825c1b7761fc8a0f1bb8e4}{\index{Class\-Detail@{Class\-Detail}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Table\-End (
 \begin{DoxyParamCaption}
 {}
@@ -485,8 +563,8 @@ End Table
 
 Definition at line 266 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a04e68e69005f3933e0f496c3db474daf}{\index{Page\-Layout@{Page\-Layout}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a04e68e69005f3933e0f496c3db474daf}{\index{Class\-Detail@{Class\-Detail}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Table\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -499,8 +577,8 @@ Start Table
 
 Definition at line 252 of file pagestructure.\-cc.
 
-\hypertarget{classPageStructureMaker_a81e902ddc0c0287df1ba0f614a3774d6}{\index{Page\-Layout@{Page\-Layout}!Title@{Title}}
-\index{Title@{Title}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageStructureMaker_a81e902ddc0c0287df1ba0f614a3774d6}{\index{Class\-Detail@{Class\-Detail}!Title@{Title}}
+\index{Title@{Title}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Structure\-Maker\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
@@ -512,11 +590,33 @@ Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
 
 Definition at line 125 of file pagestructure.\-cc.
 
+\hypertarget{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{\index{Class\-Detail@{Class\-Detail}!Total\-Classes@{Total\-Classes}}
+\index{Total\-Classes@{Total\-Classes}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Total\-Classes}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Detail\-::\-Total\-Classes (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}
+
+
+Get total classes. 
+
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: \hyperlink{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{Total\-Classes()} Description\-: Get Total classes from user -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 91 of file classdetail.\-cc.
+
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classPageStructureMaker_af41d4e21b808f5f8dc2c727f775b6fb2}{\index{Page\-Layout@{Page\-Layout}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!PageLayout@{Page\-Layout}}
+\hypertarget{classInputDetail_ac6f85380c5152c406d483726382c4798}{\index{Class\-Detail@{Class\-Detail}!field\-Name@{field\-Name}}
+\index{field\-Name@{field\-Name}!ClassDetail@{Class\-Detail}}
+\subsubsection[{field\-Name}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Input\-Field\-Name} Input\-Detail\-::field\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classInputDetail_ac6f85380c5152c406d483726382c4798}
+Objects of \hyperlink{classInputFieldName}{Input\-Field\-Name} and Read\-Fields\-Value class 
+
+Definition at line 45 of file inputdetail.\-h.
+
+\hypertarget{classPageStructureMaker_af41d4e21b808f5f8dc2c727f775b6fb2}{\index{Class\-Detail@{Class\-Detail}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!ClassDetail@{Class\-Detail}}
 \subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Structure\-Maker\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageStructureMaker_af41d4e21b808f5f8dc2c727f775b6fb2}
 H\-T\-M\-L Tag Variables for td, th, bold, etc 
 
@@ -526,5 +626,5 @@ Definition at line 37 of file pagestructure.\-h.
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-src/pagelayout.\-h\item 
-src/pagelayout.\-cc\end{DoxyCompactItemize}
+src/classdetail.\-h\item 
+src/classdetail.\-cc\end{DoxyCompactItemize}
