--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -6,51 +6,53 @@
 \item 
 file {\bfseries cgicc.\-h}
 \item 
-file {\bfseries classdetails.\-cc}
+file {\bfseries classdetail.\-cc}
 \item 
-file {\bfseries classdetails.\-h}
+file {\bfseries classdetail.\-h}
 \item 
 file {\bfseries classinfo-\/main.\-cpp}
 \item 
-file {\bfseries constants.\-h}
+file {\bfseries constant.\-h}
+\item 
+file {\bfseries database-\/detail.\-h}
+\item 
+file {\bfseries database.\-cc}
 \item 
 file {\bfseries database.\-h}
 \item 
-file {\bfseries details.\-cc}
-\item 
-file {\bfseries details.\-h}
-\item 
-file {\bfseries filenames.\-h}
+file {\bfseries filename.\-h}
 \item 
 file {\bfseries header.\-h}
 \item 
-file {\bfseries htmltags.\-cc}
+file {\bfseries inputdetail.\-cc}
 \item 
-file {\bfseries htmltags.\-h}
+file {\bfseries inputdetail.\-h}
 \item 
-file {\bfseries inputfieldnames.\-cc}
+file {\bfseries inputfieldname.\-cc}
 \item 
-file {\bfseries inputfieldnames.\-h}
-\item 
-file {\bfseries mysql.\-cc}
-\item 
-file {\bfseries mysql.\-h}
+file {\bfseries inputfieldname.\-h}
 \item 
 file {\bfseries pagelayout.\-cc}
 \item 
 file {\bfseries pagelayout.\-h}
 \item 
-file {\bfseries readinputfields.\-cc}
+file {\bfseries pagestructure.\-cc}
 \item 
-file {\bfseries readinputfields.\-h}
+file {\bfseries pagestructure.\-h}
 \item 
-file {\bfseries rollnodetails.\-cc}
+file {\bfseries projectdetail.\-h}
 \item 
-file {\bfseries rollnodetails.\-h}
+file {\bfseries readinputfield.\-cc}
 \item 
-file {\bfseries roomdetails.\-cc}
+file {\bfseries readinputfield.\-h}
 \item 
-file {\bfseries roomdetails.\-h}
+file {\bfseries rollnodetail.\-cc}
+\item 
+file {\bfseries rollnodetail.\-h}
+\item 
+file {\bfseries roomdetail.\-cc}
+\item 
+file {\bfseries roomdetail.\-h}
 \item 
 file {\bfseries totalclasses-\/main.\-cpp}
 \end{DoxyCompactItemize}
