--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -1,17 +1,17 @@
 \section{Class Hierarchy}
 This inheritance list is sorted roughly, but not completely, alphabetically\-:\begin{DoxyCompactList}
-\item \contentsline{section}{H\-T\-M\-L\-Tags}{\pageref{classHTMLTags}}{}
+\item \contentsline{section}{Input\-Field\-Name}{\pageref{classInputFieldName}}{}
+\item \contentsline{section}{My\-S\-Q\-L}{\pageref{classMySQL}}{}
+\item \contentsline{section}{Page\-Structure\-Maker}{\pageref{classPageStructureMaker}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{Detail}{\pageref{classDetail}}{}
+\item \contentsline{section}{Input\-Detail}{\pageref{classInputDetail}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{Class\-Details}{\pageref{classClassDetails}}{}
+\item \contentsline{section}{Class\-Detail}{\pageref{classClassDetail}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
-\item \contentsline{section}{Input\-Field\-Names}{\pageref{classInputFieldNames}}{}
-\item \contentsline{section}{My\-S\-Q\-L}{\pageref{classMySQL}}{}
-\item \contentsline{section}{Read\-Input\-Fields}{\pageref{classReadInputFields}}{}
-\item \contentsline{section}{Roll\-No\-Details}{\pageref{classRollNoDetails}}{}
+\item \contentsline{section}{Read\-Input\-Field}{\pageref{classReadInputField}}{}
+\item \contentsline{section}{Roll\-No\-Detail}{\pageref{classRollNoDetail}}{}
 \end{DoxyCompactList}
