--- a/Documentation/latex/annotated.tex
+++ b/Documentation/latex/annotated.tex
@@ -1,11 +1,11 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{classClassDetails}{Class\-Details} }{\pageref{classClassDetails}}{}
-\item\contentsline{section}{\hyperlink{classDetail}{Detail} }{\pageref{classDetail}}{}
-\item\contentsline{section}{\hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} }{\pageref{classHTMLTags}}{}
-\item\contentsline{section}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} }{\pageref{classInputFieldNames}}{}
+\item\contentsline{section}{\hyperlink{classClassDetail}{Class\-Detail} }{\pageref{classClassDetail}}{}
+\item\contentsline{section}{\hyperlink{classInputDetail}{Input\-Detail} }{\pageref{classInputDetail}}{}
+\item\contentsline{section}{\hyperlink{classInputFieldName}{Input\-Field\-Name} }{\pageref{classInputFieldName}}{}
 \item\contentsline{section}{\hyperlink{classMySQL}{My\-S\-Q\-L} }{\pageref{classMySQL}}{}
 \item\contentsline{section}{\hyperlink{classPageLayout}{Page\-Layout} }{\pageref{classPageLayout}}{}
-\item\contentsline{section}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} }{\pageref{classReadInputFields}}{}
-\item\contentsline{section}{\hyperlink{classRollNoDetails}{Roll\-No\-Details} }{\pageref{classRollNoDetails}}{}
+\item\contentsline{section}{\hyperlink{classPageStructureMaker}{Page\-Structure\-Maker} }{\pageref{classPageStructureMaker}}{}
+\item\contentsline{section}{\hyperlink{classReadInputField}{Read\-Input\-Field} }{\pageref{classReadInputField}}{}
+\item\contentsline{section}{\hyperlink{classRollNoDetail}{Roll\-No\-Detail} }{\pageref{classRollNoDetail}}{}
 \end{DoxyCompactList}
